--- a/css/style.css
+++ b/css/style.css
@@ -27,21 +27,21 @@ body {background: #f8f8f8; font-family: 'GmarketSansLight'; overflow-x: hidden;}
 
 h2 {font-size: 140px; font-weight: lighter; position: relative; letter-spacing: -3px;}
 
-.pdf {width: 300px; height: 60px; background: #bad43e; border-radius: 0 35px 35px 0; color: #fff; font-family: serif; font-family: 'GmarketSansMedium'; font-size: 45px; line-height: 68px;  text-align: center; position: absolute; top: 50px; left: -1000px; background: linear-gradient(90deg, rgba(186,212,62,0) 0%, rgba(186,212,62,0.8) 20%, rgba(186,212,62,1) 100%); z-index: 20; animation: pdf 1s forwards cubic-bezier(.5,.81,.33,1.09); animation-delay: 3s;}
+.pdf {width: 300px; height: 60px; background: #bad43e; border-radius: 0 35px 35px 0; color: #fff; font-family: serif; font-family: 'GmarketSansMedium'; font-size: 45px; line-height: 68px;  text-align: center; position: absolute; top: 50px; left: 50px; background: linear-gradient(90deg, rgba(186,212,62,0) 0%, rgba(186,212,62,0.8) 20%, rgba(186,212,62,1) 100%); z-index: 20; animation: pdf 1s forwards cubic-bezier(.5,.81,.33,1.09); animation-delay: 5s; opacity: 0;}
 @keyframes pdf {
-    0% {left: -1000px;}
-    100% {left: 50px;}
+    0% {opacity: 0;}
+    100% {opacity: 1;}
 }
 
 /* cover */
 .cover {height: 100vh; position: relative; width: 100%;}
-.cover svg {position: absolute; top: -5000px; opacity: 0; animation: ani 3s forwards cubic-bezier(.5,.81,.33,1.09); transform: rotate(180deg); }
+.cover svg {position: absolute; top: -5000px; opacity: 0; animation: ani 3s forwards cubic-bezier(.5,.81,.33,1.09); transform: rotate(180deg); animation-delay: 2s;}
 @keyframes ani {
     0% {top: -5000px; transform: rotate(180deg); opacity: 0;}
     50% {top: -3000px; transform: rotate(90deg); opacity: 0.15;}
     100% {top: -1650px; transform: rotate(0deg); opacity: 0.3;}
 }
-.cover .textbox  {margin: 0 auto; font-size: 140px; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); width: 100%; text-align: center;}
+.cover .textbox  {font-size: 140px; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); width: 100%; text-align: center;}
 
 .cover .textbox p {display: inline; position: relative; animation: inhye 2s forwards; animation-delay: 2s; opacity: 0;}
 @keyframes inhye {
@@ -65,9 +65,17 @@ h2 {font-size: 140px; font-weight: lighter; position: relative; letter-spacing: 
 }
 .cover .textbox span.year::before {content:''; position: absolute; width: 300px; height: 4px; background: #f8f8f8; bottom: 0; left: -9px;}
 
+.cover .sub_textbox {font-size: 40px; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); width: 100%; text-align: center; animation: hide 1.9s forwards; transform-origin: center;}
+.cover .sub_textbox span {color: #bad43e; font-weight: bold;}
+@keyframes hide {
+    0% {opacity: 1;transform: translate(-50%, -50%) rotateX(0deg);}
+    80% {opacity: 1; transform: translate(-50%, -50%) rotateX(0deg);}
+    100% {opacity: 0; transform: translate(-50%, -50%) rotateX(90deg);}
+}
+
 /* about */
 .about {width: 100%; height: 100vh; padding: 86px 0 110px 0; position: relative;}
-.about > svg {position: absolute; z-index: -1; top: 50%; transform: translateY(-50%); opacity: 0.1; height: 280%; animation: ani2 2s forwards cubic-bezier(.44,1.03,.72,1.1);}
+.about > svg {position: absolute; z-index: -1; top: 50%; transform: translateY(-50%); opacity: 0; height: 280%; animation: ani2 2s forwards cubic-bezier(.44,1.03,.72,1.1); animation-delay: 3s;}
 @keyframes ani2 {
     0% {opacity: 0; width: 0; left: 100%;}
     50% {opacity: 0.055;}
